--- a/public/500.html
+++ b/public/500.html
@@ -18,10 +18,7 @@
 
 <body>
   <!-- This file lives in public/500.html -->
-  <a href="/" id="logo_link" title ="Bike Sales Nepal"><div class= "logo">
-      <%= image_tag "logo.png", id:"image_logo"%>
-      BIKES.BECHNU.com
-          </div>
+  <a class="brand" href="/" title="Bike Sales Nepal"><img alt="Logo_top" src="/assets/logo_top.png"></a>
   <div class="dialog">
     <h1>We're sorry, but something went wrong.</h1>
   </div>
